--- a/main.html
+++ b/main.html
@@ -10,6 +10,35 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div class="block" data-ns-test="block-inline-div">Test1</div>
+<div class="inline" data-ns-test="block-inline-div">Test2</div>
+
+<button class="inline" data-ns-test="block-inline-button">Test1</button>
+<button class="inline" data-ns-test="block-inline-button">Test2</button>
+
+<span class="inline" data-ns-test="block-inline-span">Test1</span>
+<span class="inline" data-ns-test="block-inline-span">Test2</span>
+
+<p class="block" data-ns-test="block-inline-p">Test1</p>
+<p class="block" data-ns-test="block-inline-p">Test2</p>
+
+<input class="inline" data-ns-test="block-inline-input" type="text" value="Test1">
+<input class="inline" data-ns-test="block-inline-input" type="text" value="Test2">
+
+<cite class="inline" data-ns-test="block-inline-cite">Test1</cite>
+<cite class="inline" data-ns-test="block-inline-cite">Test2</cite>
+
+<code class="inline" data-ns-test="block-inline-code">Test1</code>
+<code class="inline" data-ns-test="block-inline-code">Test2</code>
+
+<h1 class="block" data-ns-test="block-inline-h1">Test1</h1>
+<h1 class="block" data-ns-test="block-inline-h1">Test2</h1>
+
+<sup class="inline" data-ns-test="block-inline-sup">Test1</sup>
+<sup class="inline" data-ns-test="block-inline-sup">Test2</sup>
+
+<sub class="inline" data-ns-test="block-inline-sub">Test1</sub>
+<sub class="inline" data-ns-test="block-inline-sub">Test2</sub>
 
 </body>
 
